merge userdetails to config class