@@ -1,7 +1,12 @@
 package com.catalogue.authentication.entity;
 
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonProperty;
@@ -24,29 +29,64 @@ import lombok.NoArgsConstructor;
 @AllArgsConstructor
 @NoArgsConstructor
 @Table(uniqueConstraints = {
-        @UniqueConstraint(name = "email_unique", columnNames = "email")
+                @UniqueConstraint(name = "email_unique", columnNames = "email")
 })
-public class Login {
-    @Id
-    @SequenceGenerator(name = "login_sequence", sequenceName = "login_sequence", allocationSize = 1)
-    @GeneratedValue(strategy = GenerationType.SEQUENCE, generator = "login_sequence")
-    @JsonIgnore
-    private Long id;
-    @NotBlank(message = "Email cannot be blank")
-    @Email(message = "Must include @,. and top level domain (.com, .uk etc) ",
-            regexp = "^(?=.{1,64}@)[A-Za-z0-9_-]+(\\.[A-Za-z0-9_-]+)*@[^-]" +
-                    "[A-Za-z0-9-]+(\\.[A-Za-z0-9-]+)*(\\.[A-Za-z]{2,})$")
-    private String email;
-    @NotBlank(message = "Password cannot be blank")
-    @JsonProperty(access = JsonProperty.Access.WRITE_ONLY)
-    private String password;
-    @NotBlank(message = "Role cannot be blank")
-    private String role;
+public class Login implements UserDetails {
+        @Id
+        @SequenceGenerator(name = "login_sequence", sequenceName = "login_sequence", allocationSize = 1)
+        @GeneratedValue(strategy = GenerationType.SEQUENCE, generator = "login_sequence")
+        @JsonIgnore
+        private Long id;
+        @NotBlank(message = "Email cannot be blank")
+        @Email(message = "Must include @,. and top level domain (.com, .uk etc) ", regexp = "^(?=.{1,64}@)[A-Za-z0-9_-]+(\\.[A-Za-z0-9_-]+)*@[^-]"
+                        +
+                        "[A-Za-z0-9-]+(\\.[A-Za-z0-9-]+)*(\\.[A-Za-z]{2,})$")
+        private String email;
+        @NotBlank(message = "Password cannot be blank")
+        @JsonProperty(access = JsonProperty.Access.WRITE_ONLY)
+        private String password;
+        @NotBlank(message = "Role cannot be blank")
+        private String role;
 
-    // @JsonIgnore
-    // public List<String> getRole() {
-    //     return Collections.singletonList(role);
-    // }
-    private Long userId;
+        // @JsonIgnore
+        // public List<String> getRole() {
+        // return Collections.singletonList(role);
+        // }
+        private Long userId;
+
+        @Override
+        public Collection<? extends GrantedAuthority> getAuthorities() {
+                return List.of(new SimpleGrantedAuthority(role));
+        }
+
+        @Override
+        public String getPassword() {
+                return password;
+        }
+
+        @Override
+        public String getUsername() {
+                return email;
+        }
+
+        @Override
+        public boolean isAccountNonExpired() {
+                return true;
+        }
+
+        @Override
+        public boolean isAccountNonLocked() {
+                return true;
+        }
+
+        @Override
+        public boolean isCredentialsNonExpired() {
+                return true;
+        }
+
+        @Override
+        public boolean isEnabled() {
+                return true;
+        }
 
 }
